--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,11 @@
 .App-link {
   color: #09d3ac;
 }
+
+h2 {
+  color: #e3e3e3;
+ background-color: #282c34;
+  text-align: center;
+  padding: 10px;
+}
+
